Time: 8 ms (84.86%), Space: 47.2 MB (6.3%) - LeetHub